--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 .text{
     color: #3C354F;
 font-family: Work Sans;
-font-size: 18px;
+font-size: 15px;
 font-style: normal;
 font-weight: 500;
 line-height: normal;
@@ -47,4 +47,113 @@ span{
     background-color: rgba(11, 2, 35, 0.10);
     padding: 15px 20px;
     border-radius: 8px;
+}
+main{
+    margin: 0px 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.main-section1{
+    background-image: url(./images/Group\ 14.png);
+}
+.heading1{
+    color: #0B0223;
+font-family: Work Sans;
+font-size: 48px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+}
+.heading2{
+    color: #8758F1;
+    font-family: Work Sans;
+    font-size: 95px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin: 0;
+
+}
+.pause{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+.download{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+.friend{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+.main-section1 img{
+    width: 24px;
+    height: 24px;
+}
+.main-section2 img{
+     width: 700px;
+     height: 600px;
+}
+.btn{
+    border-radius: 48px;
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+    padding: 15px 30px;
+    color: #FFF;
+    font-family: Work Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    border: none;
+}
+.btn2{
+    padding: 15px 30px;
+    color: #FFF;
+    font-family: Work Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    border: none;
+    border-radius: 48px;
+    background-color:  #4EC5F7;
+}
+
+
+
+
+
+
+
+
+/* responsive */
+/* responsive for mobile */
+@media screen and (max-width:576px) {
+    .nav-bar{
+        flex-direction: column;
+        align-items: center;
+    }
+    .nav-section2>ul{
+        flex-direction: column;
+        align-items: center;
+    }
+    main{
+        margin: 0;
+        flex-direction: column;
+    }
+    .main-section2 img{
+        width: 375px;
+        height: 400px;
+    }
+}
+/* responsive for tablegt */
+@media screen and (min-width:577px) and (max-width:992px) {
+    main{
+        margin: 0;
+        flex-direction: column;
+   }
 }
